[package]
name = "webserver"
version = "0.1.0"
authors = ["Bill Robinson <dseevr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
incremental = false
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'unwind'
overflow-checks = false

[dependencies.rocket]
version = "0.4.7"
default-features = false
features = []

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["serve"]